First pass at adding ninja builds.
The project now uses ninja builds files to manage the "inter
dependencies of files".

Also added a very basic test project for testing builds.

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,14 @@ dmypy.json
 
 # Pycharm project files
 .idea
+
+# C / Cpp build artifacts
+*.o
+*.obj
+*.lib
+*.dll
+*.exe
+.ninja_deps
+.ninja_log
+build.ninja
+
