Internal dependencies get traced and rebuilt.
For example if an exe requires a library, then the library is an
implicit dependency to exe. Ninja manages changes and rebuilds the
library when it gets out of date.

Furthermore when a .dll is specified as an library dependency, we juggle
the name so the actual link line the compiler recieves is the .lib (since
you can't link against a .dll).

--- a/test/project/windows-clang++/target.toml
+++ b/test/project/windows-clang++/target.toml
@@ -14,21 +14,21 @@ defines = []
     buildRule = "staticlib"
     requires = []
     outputName = "libWindowsProject.lib"
-    srcDirs = ["../lib"]
-    includePaths = ["./lib"]
+    srcDirs = ["../libProject"]
+    includePaths = ["../libProject"]
 
 [[builds]]
     name = "shared"
     buildRule = "dynamiclib"
     requires = []
     outputName = "sharedWindowsProject.dll"
-    srcDirs = ["../lib"]
-    includePaths = ["../lib"]
+    srcDirs = ["../libProject"]
+    includePaths = ["../libProject"]
 
 [[builds]]
     name = "exe"
     buildRule = "exe"
     requires = []
     outputName = "project.exe"
-    srcDirs = ["../app", "../lib"]
-    includePaths = ["../lib"]
+    srcDirs = ["../app", "../libProject"]
+    includePaths = ["../libProject"]
