Make paths relative to project root.
This commit adds `projectRoot` field to the target schema.
This allows a developer to spectify where the project is in relation to
the target build.
This allows directories to be specified as if running from the project
root rather than from the build dir. For example it allows a src dir to
be specified as `srcDirs = ["src"]` rather than `srcDirs =
["../../srcDirs"]`.

--- a/test/project/windows-clang++/target.toml
+++ b/test/project/windows-clang++/target.toml
@@ -9,24 +9,26 @@ flags = [
 
 defines = []
 
+projectRoot = ".."
+
 [[builds]]
     name = "static"
     buildRule = "staticlib"
     outputName = "project.lib"
-    srcDirs = ["../libproject"]
-    includePaths = ["../libproject"]
+    srcDirs = ["libproject"]
+    includePaths = ["libproject"]
 
 [[builds]]
     name = "shared"
     buildRule = "dynamiclib"
     outputName = "libProject.so"
-    srcDirs = ["../libproject"]
-    includePaths = ["../libproject"]
+    srcDirs = ["libproject"]
+    includePaths = ["libproject"]
 
 [[builds]]
     name = "exe"
     requires = ["shared"]
     buildRule = "exe"
     outputName = "project.exe"
-    srcDirs = ["../app"]
-    includePaths = ["../libproject"]
+    srcDirs = ["app"]
+    includePaths = ["libproject"]
