--- a/test/project/windows-clang++/target.toml
+++ b/test/project/windows-clang++/target.toml
@@ -14,14 +14,14 @@ projectRoot = ".."
 [[builds]]
     name = "static"
     buildRule = "staticlib"
-    outputName = "project.lib"
+    outputName = "Calculator"
     srcDirs = ["libproject"]
     includePaths = ["libproject"]
 
 [[builds]]
     name = "shared"
     buildRule = "dynamiclib"
-    outputName = "libProject.so"
+    outputName = "Calculator"
     srcDirs = ["libproject"]
     includePaths = ["libproject"]
 
@@ -29,6 +29,6 @@ projectRoot = ".."
     name = "exe"
     requires = ["shared"]
     buildRule = "exe"
-    outputName = "project.exe"
+    outputName = "Project"
     srcDirs = ["app"]
     includePaths = ["libproject"]
