--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ cerberus = "^1.3"
 ninja-syntax = "^1.7"
 
 [tool.poetry.dev-dependencies]
+pre-commit = "^2.6.0"
+black = "^19.10b0"
 
 [tool.poetry.scripts]
 aim = "aim.main:entry"
