--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.7"
 toml = "^0.10.0"
 cerberus = "^1.3"
 ninja-syntax = "^1.7"
+tabulate = "^0.8.7"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.6.0"
