Renamed module to aim_build.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "aim"
-version = "0.1.8"
+name = "aim-build"
+version = "0.1.9"
 description = "A simple, but easy to use, build tool for C++."
 authors = ["David Walker <diwalkerdev@twitter.com>"]
 license = "MPL 2.0"
