--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "aim-build"
-version = "0.1.9"
-description = "A simple, but easy to use, build tool for C++."
+version = "0.1.10"
+description = "A powerful and easy to use build tool for C++."
 authors = ["David Walker <diwalkerdev@twitter.com>"]
 license = "MPL 2.0"
 readme = "README.md"
@@ -19,7 +19,6 @@ classifiers = [
 	"Programming Language :: Python :: 3.7",
 	"Programming Language :: Python :: 3.8",
 	"Topic :: Software Development :: Build Tools",
-	
 ]
 
 [tool.poetry.dependencies]
