--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aim-build"
-version = "0.1.10"
+version = "0.1.11"
 description = "A powerful and easy to use build tool for C++."
 authors = ["David Walker <diwalkerdev@twitter.com>"]
 license = "MPL 2.0"
@@ -34,7 +34,7 @@ black = "^19.10b0"
 pylint = "^2.5.3"
 
 [tool.poetry.scripts]
-aim = "aim.main:entry"
+aim = "aim_build.main:entry"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
