--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,7 +31,7 @@ jobs:
         poetry install
     - name: Lint with pylint
       run: |
-        $HOME/.poetry/bin/poetry run pylint src/
+        PYTHONPATH=$PWD/src $HOME/.poetry/bin/poetry run pylint --rcfile=.pylintrc src/aim_build || $HOME/.poetry/bin/poetry run pylint-exit $? -efail
 #        # stop the build if there are Python syntax errors or undefined names
 #        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
