Changed flags to cxxflags.

--- a/test/project/linux-clang++/target.toml
+++ b/test/project/linux-clang++/target.toml
@@ -5,11 +5,9 @@ cc = "clang"
 ar = "ar"
 compilerFrontend="gcc"
 
-flags = [
+cxxflags = [
     "-std=c++17",
 ]
-
-defines = []
 
 [[builds]]
     name = "static"
